# profile

./: .env.example  AGENTS.md  EXAMPLES.md  GEMINI.md  README.md  SQLALCHEMY_GUIDE.md  alembic.ini  compose.yml  pyproject.toml  quy-trinh.md  requirement.md
app/: main.py
app/api/: deps.py  shared_routes.py  tenant_routes.py
app/api/v1/: api.py
app/core/: config.py  graph.py
app/db/: README.md  __init__.py  base.py  database_manager.py  provisioner.py  session.py  tenant_config.py
app/models/: shared.py  tenant.py
app/modules/auth/: models.py  schemas.py
app/modules/document/: api.py  models.py  schemas.py  service.py
app/modules/profile/: api.py  internal_api.py  models.py  schemas.py  service.py
app/modules/social/: api.py  models.py  schemas.py  service.py
app/modules/system/: api.py
app/modules/tenant/: api.py  service.py
app/modules/wallet/: api.py  schemas.py  service.py
app/schemas/: document.py  profile.py  shared.py
app/services/: connection_service.py  document_service.py  profile_service.py  social_service.py  tenant_service.py
bruno/: README.md  bruno.json
bruno/Shared Database/: Get Root.bru
bruno/environments/: local.bru  production.bru
docs/: ALEMBIC_GUIDE.md  DANHGIA-DB.md  FEATURES_CURRENT.md  REFACTOR-PLAN.md  bang-mo-ta-ca-the.md  bang-tao-ma-ca-the.md  bangmota-cathe.md
migrations/shared/: env.py
migrations/tenant/: env.py
scripts/: clean_db.py  clean_tenant_db.py  init_dev_data.py  init_dev_tenant.py
tests/: conftest.py  test_database_manager.py  test_profile_service.py
tests/core/: test_database_manager.py
(+51 files in other folders)
